--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,8 +12,10 @@
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-lazyload": "^3.2.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
